fix gap container

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -10,7 +10,7 @@ ul, li {
   text-align: center;
   display: grid;
   grid-template-columns: 1fr 4fr;
-  gap: 15px;
+  gap: 4px;
 }
 
 .container div {
